--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel": "^5.6.14",
+    "babel-runtime": "^5.6.15",
     "debug": "^2.2.0",
     "koa": "^0.21.0",
-    "node-jsx": "^0.13.3",
+    "lodash": "^3.10.0",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "rx": "^2.5.3"
   },
   "devDependencies": {},
   "scripts": {
-    "app": "node --harmony app.js"
+    "app": "node --harmony server.babel.js"
   }
 }
